<resources>
    <string name="app_name">Test</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>


    <string name="name">昵称</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="location">所在地</string>

    <string name="logIn">登录</string>
    <string name="user_logIn_sucess">用户登录成功</string>
    <string name="logIn_fail">登录失败</string>

    <string name="signIn">注册</string>
    <string name="signIn_sucess">注册成功</string>
    <string name="signIn_fail">注册失败</string>



    <string name="nameOrPwd_already_exist">用户名或密码已经存在</string>
    <string name="name_empty">用户名为空</string>
    <string name="account_empty">账号为空</string>
    <string name="pwd_empty">密码为空</string>


    <string name="inputAccHint">请输入</string>



    <string name="cancle">取消</string>
    <string name="action_settings1">Settings</string>
    <string name="action_settings2">action_settings</string>

    <string name="xueTang">学堂</string>
    <string name="dongMan">动漫</string>
    <string name="lingShi">零食</string>
    <string name="feiZaoJu">肥皂剧</string>
    <string name="dianYou">电游</string>
    <string name="wo">我</string>

    <string name="title_activity_fei_zao_ju">肥皂剧</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_register">LoginActivity</string>
    <string name="title_activity_xue_tang">XueTang</string>
    <string name="title_activity_dong_man">DongMan</string>
    <string name="title_activity_wo">Wo</string>
    <string name="title_activity_ling_shi">LingShi</string>
    <string name="title_activity_dian_you">DianYou</string>
    <string name="title_activity_li_yu">LiYu</string>
    <string name="title_activity_sign_in">SignIn</string>
</resources>
