<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shaonaji.weihuai.SignInActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        />
    <TextView
        android:id="@+id/name_tv"
        android:textSize="18dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/name_et"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/account_tv"
        android:textSize="18dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"/>
    <EditText
        android:id="@+id/account_et"
        android:hint="手机号码"
        android:textSize="15dp"
        android:inputType="phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/city_tv"
        android:textSize="18dp"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/location"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:entries="@array/diqu"
        android:layout_gravity="right" />
    <TextView
        android:id="@+id/password_tv"
        android:textSize="18dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/password_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"/>
    <Button
        android:id="@+id/sigIn"
        android:textSize="18dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"/>




</LinearLayout>
