<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shaonaji.weihuai.LoginActivity"
    android:weightSum="1">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:layout_weight="0.15" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"/>
    <Button

        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logIn"/>
</LinearLayout>
